fixes sidebar not correclty positioning on mobile

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -2,11 +2,17 @@
 	.layout {
 		column-gap: 10px;
 		display: grid;
-		grid-template-columns:
-			[start l-margin] 10px [l-margin content main] minmax(0, 812px) [main sidebar] minmax(0, 322px)
-			[sidebar content-end r-margin] 10px [r-margin end];
 
-		@media (min-width: 1280px) {
+		@media (--above_med) {
+			grid-template-columns:
+				[start l-margin] 10px [l-margin content main] minmax(0, 812px) [main sidebar] minmax(
+					0,
+					322px
+				)
+				[sidebar content-end r-margin] 10px [r-margin end];
+		}
+
+		@media (--above_xlarge) {
 			column-gap: 48px;
 			display: grid;
 			grid-template-columns:
